# flutter_edge_detection

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
lib/: api.dart  bridge_definitions.dart  main.dart  native.dart
rust_edge_detection/: Cargo.toml
rust_edge_detection/src/: api.rs
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
