[package]
name = "run_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "native"
crate-type = ["cdylib"]


[dependencies]
opencv = { version = "^0.76.4"}
flutter_rust_bridge = "1"
anyhow = "1.0.69"
